--- a/public/index.html
+++ b/public/index.html
@@ -3,8 +3,15 @@
   <head>
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
+    <meta name="apple-mobile-web-app-title" content="Pokemon Unite Builder">
+    <meta name="application-name" content="Pokemon Unite Builder">
+    <meta name="msapplication-TileColor" content="#da532c">
+    <meta name="theme-color" content="#b91c1d">
+
+    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+
     <meta
       name="description"
       content="Web site created using create-react-app"
